--- a/session3/homework3.ipynb
+++ b/session3/homework3.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 1,
    "source": [
     "import pandas as pd\n",
     "import numpy as np"
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 2,
    "source": [
     "data = \"https://raw.githubusercontent.com/alexeygrigorev/datasets/master/AB_NYC_2019.csv\""
    ],
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 3,
    "source": [
     "!wget $data -O data.csv"
    ],
@@ -37,16 +37,16 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "--2021-09-26 17:13:49--  https://raw.githubusercontent.com/alexeygrigorev/datasets/master/AB_NYC_2019.csv\n",
+      "--2021-09-26 18:12:40--  https://raw.githubusercontent.com/alexeygrigorev/datasets/master/AB_NYC_2019.csv\n",
       "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.108.133, 185.199.109.133, 185.199.110.133, ...\n",
       "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.108.133|:443... connected.\n",
       "HTTP request sent, awaiting response... 200 OK\n",
       "Length: 7077973 (6.8M) [text/plain]\n",
       "Saving to: ‘data.csv’\n",
       "\n",
-      "data.csv            100%[===================>]   6.75M  2.09MB/s    in 3.4s    \n",
+      "data.csv            100%[===================>]   6.75M  6.57MB/s    in 1.0s    \n",
       "\n",
-      "2021-09-26 17:13:53 (1.96 MB/s) - ‘data.csv’ saved [7077973/7077973]\n",
+      "2021-09-26 18:12:42 (6.57 MB/s) - ‘data.csv’ saved [7077973/7077973]\n",
       "\n"
      ]
     }
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 4,
    "source": [
     "df = pd.read_csv('data.csv')\n",
     "df.head()"
@@ -232,14 +232,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 155
+     "execution_count": 4
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 5,
    "source": [
     "features = [\n",
     "  'neighbourhood_group',\n",
@@ -259,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 6,
    "source": [
     "df = df[features].copy()\n",
     "df.isnull().sum()"
@@ -283,14 +283,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 157
+     "execution_count": 6
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 7,
    "source": [
     "df.reviews_per_month = df.reviews_per_month.fillna(0)\n",
     "\n",
@@ -320,7 +320,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 158
+     "execution_count": 7
     }
    ],
    "metadata": {}
@@ -335,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 8,
    "source": [
     "df.neighbourhood_group.value_counts()"
    ],
@@ -353,7 +353,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 159
+     "execution_count": 8
     }
    ],
    "metadata": {}
@@ -378,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 9,
    "source": [
     "from sklearn.model_selection import train_test_split"
    ],
@@ -387,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 10,
    "source": [
     "df_full_train, df_test = train_test_split(df, test_size=0.2, random_state=42)\n",
     "df_train, df_val = train_test_split(df_full_train, test_size=0.25, random_state=42)"
@@ -397,7 +397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 11,
    "source": [
     "len(df_train), len(df_val), len(df_test)"
    ],
@@ -410,14 +410,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 162
+     "execution_count": 11
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 12,
    "source": [
     "df_train = df_train.reset_index(drop=True)\n",
     "df_val = df_val.reset_index(drop=True)\n",
@@ -427,6 +427,10 @@
     "y_train = df_train.above_average.values\n",
     "y_val = df_val.above_average.values\n",
     "y_test = df_test.above_average.values\n",
+    "\n",
+    "y_train_linear = np.log1p(df_train.price.values)\n",
+    "y_val_linear = np.log1p(df_val.price.values)\n",
+    "y_test_linear = np.log1p(df_test.price.values)\n",
     "\n",
     "del df_train['price']\n",
     "del df_val['price']\n",
@@ -443,14 +447,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 163
+     "execution_count": 12
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 13,
    "source": [
     "df_full_train.dtypes"
    ],
@@ -474,14 +478,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 164
+     "execution_count": 13
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 14,
    "source": [
     "numerical = [\n",
     "  'latitude',\n",
@@ -512,7 +516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 15,
    "source": [
     "df_train[numerical].corr()"
    ],
@@ -662,7 +666,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 166
+     "execution_count": 15
     }
    ],
    "metadata": {}
@@ -686,7 +690,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 16,
    "source": [
     "df.head()"
    ],
@@ -825,7 +829,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 167
+     "execution_count": 16
     }
    ],
    "metadata": {}
@@ -842,7 +846,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 17,
    "source": [
     "from sklearn.metrics import mutual_info_score\n",
     "df_train"
@@ -1075,14 +1079,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 168
+     "execution_count": 17
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 18,
    "source": [
     "for c in categorical:\n",
     "  print(c, pd.unique(df_train[c]))"
@@ -1101,7 +1105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 19,
    "source": [
     "def mutual_info_price_score(series):\n",
     "  return round(mutual_info_score(series, df_full_train.above_average),2)"
@@ -1111,7 +1115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 20,
    "source": [
     "mi = df_full_train[categorical].apply(mutual_info_price_score)\n",
     "mi.sort_values(ascending=False)"
@@ -1127,7 +1131,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 171
+     "execution_count": 20
     }
    ],
    "metadata": {}
@@ -1162,7 +1166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 21,
    "source": [
     "from sklearn.feature_extraction import DictVectorizer\n",
     "from sklearn.linear_model import LogisticRegression"
@@ -1172,7 +1176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 22,
    "source": [
     "dv = DictVectorizer(sparse=False)"
    ],
@@ -1181,7 +1185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 23,
    "source": [
     "train_dicts = df_train[categorical+numerical].to_dict(orient='records')\n",
     "X_train = dv.fit_transform(train_dicts)\n",
@@ -1196,14 +1200,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 174
+     "execution_count": 23
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 24,
    "source": [
     "val_dicts = df_val[categorical+numerical].to_dict(orient='records')\n",
     "X_val = dv.transform(val_dicts)\n",
@@ -1218,14 +1222,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 175
+     "execution_count": 24
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 25,
    "source": [
     "model = LogisticRegression(solver='lbfgs', max_iter=10000, C=1.0, random_state=42)\n",
     "model.fit(X_train, y_train)"
@@ -1239,14 +1243,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 176
+     "execution_count": 25
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 26,
    "source": [
     "model.intercept_[0]"
    ],
@@ -1259,14 +1263,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 177
+     "execution_count": 26
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 27,
    "source": [
     "model.coef_[0].round(3)"
    ],
@@ -1281,14 +1285,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 178
+     "execution_count": 27
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 28,
    "source": [
     "y_pred = model.predict_proba(X_val)[:, 1]\n",
     "y_pred"
@@ -1303,14 +1307,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 179
+     "execution_count": 28
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 29,
    "source": [
     "price_decision = (y_pred >= 0.5)"
    ],
@@ -1319,7 +1323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 30,
    "source": [
     "initial_accuracy = (y_val == price_decision).mean().round(2)\n",
     "initial_accuracy"
@@ -1333,7 +1337,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 181
+     "execution_count": 30
     }
    ],
    "metadata": {}
@@ -1366,7 +1370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 31,
    "source": [
     "dict(zip(dv.get_feature_names(), model.coef_[0].round(3)))"
    ],
@@ -1393,14 +1397,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 182
+     "execution_count": 31
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 32,
    "source": [
     "to_remove = [\n",
     "  'neighbourhood_group',\n",
@@ -1416,7 +1420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 33,
    "source": [
     "def feature_elimination(set):\n",
     "  train_dicts = df_train[set].to_dict(orient='records')\n",
@@ -1441,7 +1445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 34,
    "source": [
     "for removed_feature in to_remove:\n",
     "  cur_accuracy = feature_elimination(list(set(all) ^ set([removed_feature])))\n",
@@ -1485,9 +1489,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "source": [],
+   "execution_count": 35,
+   "source": [
+    "from sklearn.linear_model import Ridge"
+   ],
    "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "source": [
+    "alpha_values = [0, 0.01, 0.1, 1, 10]"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "source": [
+    "def rmse(y, y_pred):\n",
+    "  se = (y - y_pred) ** 2\n",
+    "  mse = se.mean()\n",
+    "  return np.sqrt(mse)"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "source": [
+    "for a in alpha_values:\n",
+    "  model = Ridge(a)\n",
+    "  model.fit(X_train, y_train_linear)\n",
+    "  y_pred = model.predict(X_val)\n",
+    "  print(a,',', rmse(y_val_linear, y_pred).round(3))"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "0 , 0.497\n",
+      "0.01 , 0.497\n",
+      "0.1 , 0.497\n",
+      "1 , 0.497\n",
+      "10 , 0.498\n"
+     ]
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# Answer 6\n",
+    "0"
+   ],
    "metadata": {}
   }
  ],
